Updated light mode colour schemes to make the website readable in both light and dark mode. Added Navigation Bar Accent colour, which changes from Blue to Gold when switching from light to dark mode. Added fixed white text colour for tech stack project cards as the background is fixed to blue.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,11 @@
   --background: #f9f9f9; /* Off-white background for a modern look */
   --foreground: #000000; /* True black for better contrast */
   --accent: #1e3a8a; /* Dark blue accent */
-  --accent-opacity: rgba(30,58,138,0.5);
+  --accent-opacity: rgba(30,58,138,0.8);
   --secondary-accent: #d4af37; /* Soft gold for highlights */
-  --secondary-accent-opacity: rgba(212,175,55,0.5);
-  --nav-bg: #1f2937; /* Gray-800 for navigation background */
+  --secondary-accent-opacity: rgba(212,175,55,0.8);
+  --nav-accent: #1e3a8a;
+  --nav-bg: #DEE2E6; /* Gray-800 for navigation background */
   --text-primary: #000000; /* Black for primary text */
   --link-active: #38bdf8; /* Blue-400 for active links */
   --text-secondary: #374151; /* Gray-700 for secondary text */
@@ -31,6 +32,7 @@
     --accent-opacity: rgba(30,58,138,0.5);
     --secondary-accent: #c49f45; /* Adjusted soft gold for dark mode */
     --secondary-accent-opacity: rgba(212,175,55,0.5);
+    --nav-accent: #c49f45;
     --nav-bg: #111827; /* Darker Gray-900 for navigation background in dark mode */
     --text-primary: #ffffff; /* Light Gray-100 for primary text in dark mode */
     --link-active: #5495ff; /* Blue-300 for active links in dark mode */
